--- a/tests/check/element/CMakeLists.txt
+++ b/tests/check/element/CMakeLists.txt
@@ -153,4 +153,20 @@ if (${ENABLE_DEBUGGING_TESTS})
   target_link_libraries(test_dtlssrtp ${gstreamer-1.5_LIBRARIES}
                                       ${gstreamer-check-1.5_LIBRARIES}
                                       ${gio-2.0_LIBRARIES})
+
+add_test_program (test_webrtc_data_proto webrtc_data_proto.c)
+add_dependencies(test_webrtc_data_proto kmstestutils ${LIBRARY_NAME}plugins)
+target_include_directories(test_webrtc_data_proto PRIVATE
+                           ${KmsGstCommons_INCLUDE_DIRS}
+                           ${gstreamer-1.5_INCLUDE_DIRS}
+                           ${gstreamer-check-1.5_INCLUDE_DIRS}
+                           ${nice_INCLUDE_DIRS}
+                           "${CMAKE_CURRENT_SOURCE_DIR}/../../../src/gst-plugins")
+target_link_libraries(test_webrtc_data_proto
+                      ${gstreamer-1.5_LIBRARIES}
+                      ${gstreamer-check-1.5_LIBRARIES}
+                      ${nice_LIBRARIES}
+                      ${KmsGstCommons_LIBRARIES}
+                      kmstestutils
+                      webrtcdataproto)
 endif()
