kmswebrtcdatachannel: Active notification of buffers received
Change-Id: I2527f4fd43ff9c249b107fff1d557898809b5f0c

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -49,6 +49,7 @@ set(KMS_WEBRTC_DATA_PROTOCOL_HEADERS
   kmswebrtcdatachannelstate.h
   kmswebrtcdatachannelpriority.h
   kmswebrtcdataproto.h
+  kmswebrtcdatachannelutil.h
 )
 
 set(KMS_WEBRTC_DATA_PROTOCOL_ENUM_HEADERS
