kmswebrtcsession: class to manage WebRTC sessions
Change-Id: Ifd6d83fb82d711fc84eeea6bb2f672abf61ad3ec

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -102,6 +102,7 @@ set(KMS_WEBRTC_SOURCES
   kmswebrtcbundleconnection.c
   kmswebrtcsctpconnection.c
   kmswebrtctransport.c
+  kmswebrtcsession.c
   kmswebrtcendpoint.c
 )
 
