config: Remove not supported coment at end of line in ini files
Change-Id: Id2682e2d9f3bfe0ec1f3d566123e3e20f4d9167a

--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -1,4 +1,5 @@
-; stunServerAddress=77.72.174.167 ; Only IP address are supported
+; Only IP address are supported for addresses
+; stunServerAddress=77.72.174.167
 ; stunServerPort=3478
 
 ; turnURL gives the necessary info to configure TURN for WebRTC.
