config: Clarify how stun server should be configured
Also remove example one that is not working

Change-Id: I9b48e1aa51e18ebbf01071fa2406a1bd6ff10f26

--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -1,6 +1,9 @@
-; Only IP address are supported for addresses
-; stunServerAddress=77.72.174.167
-; stunServerPort=3478
+; Only IP address are supported, not domain names for addresses
+; You have to find a valid stun server. You can check if it works
+; usin this tool:
+;   http://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/
+; stunServerAddress=<serverAddress>
+; stunServerPort=<serverPort>
 
 ; turnURL gives the necessary info to configure TURN for WebRTC.
 ;    'address' must be an IP (not a domain).
