--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -9,11 +9,14 @@ add_subdirectory(implementation/HttpServer)
 generate_code (
   MODELS ${CMAKE_CURRENT_SOURCE_DIR}/interface
   SERVER_IMPL_LIB_EXTRA_INCLUDE_DIRS
+      ${KmsGstCommons_INCLUDE_DIRS}
       ${CMAKE_CURRENT_SOURCE_DIR}/implementation
       ${CMAKE_CURRENT_SOURCE_DIR}/../gst-plugins
       ${nice_INCLUDE_DIRS}
-  SERVER_IMPL_LIB_EXTRA_LIBRARIES kmshttpep
-      ${nice_LIBRARIES}
+  SERVER_IMPL_LIB_EXTRA_LIBRARIES
+      kmshttpep
       kmswebrtcendpointlib
+      ${nice_LIBRARIES}
+      ${KmsGstCommons_LIBRARIES}
   SERVER_STUB_DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/implementation/objects
 )
