kmswebrtctransport: Remove nice references from transport base class
Change-Id: I775bf66cb178ce0e52983261517f642110e26816

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -116,6 +116,8 @@ set(KMS_WEBRTC_SOURCES
   kmswebrtcrtcpmuxconnection.c
   kmswebrtcbundleconnection.c
   kmswebrtcsctpconnection.c
+  kmswebrtctransportsrcnice.c
+  kmswebrtctransportsinknice.c
   kmswebrtctransportsrc.c
   kmswebrtctransportsink.c
   kmswebrtctransport.c
