Use kmsicebaseagent instead of nice agent
Change-Id: I58dc810870c532f4b23235eec3b3122410fcc986

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -5,51 +5,18 @@ set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 set(CUSTOM_PREFIX "kurento")
 set(INCLUDE_PREFIX "${CMAKE_INSTALL_INCLUDEDIR}/${CUSTOM_PREFIX}/webrtcendpoint")
 
-# kmsicecandidate begin
-set(KMS_ICE_CANDIDATE_SOURCES
+# icecandidate begin
+set(KMS_ICE_SOURCES
   kmsicecandidate.c
+  kmsicebaseagent.c
+  kmsiceniceagent.c
 )
 
-set(KMS_ICE_CANDIDATE_HEADERS
+set(KMS_ICE_HEADERS
   kmsicecandidate.h
+  kmsicebaseagent.h
+  kmsiceniceagent.h
 )
-
-add_library(kmsicecandidate SHARED ${KMS_ICE_CANDIDATE_SOURCES} ${KMS_ICE_CANDIDATE_HEADERS})
-
-set_target_properties(kmsicecandidate PROPERTIES PUBLIC_HEADER "${KMS_ICE_CANDIDATE_HEADERS}")
-set_target_properties(kmsicecandidate PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
-
-include_directories(
-  ${nice_INCLUDE_DIRS}
-)
-
-target_link_libraries(kmsicecandidate
-  ${nice_LIBRARIES}
-)
-
-install(
-  TARGETS kmsicecandidate
-  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  PUBLIC_HEADER DESTINATION ${INCLUDE_PREFIX}
-)
-
-foreach (HEADER ${KMS_ICE_CANDIDATE_HEADERS})
-  list (APPEND FIND_HEADERS webrtcendpoint/${HEADER})
-endforeach ()
-
-set (REQUIRED_LIBS
-  "nice ${NICE_REQUIRED}"
-)
-
-configure_file(FindKmsIceCandidate.cmake.in ${CMAKE_BINARY_DIR}/FindKmsIceCandidate.cmake @ONLY)
-
-install(FILES
-  ${CMAKE_BINARY_DIR}/FindKmsIceCandidate.cmake
-  DESTINATION ${CMAKE_MODULES_INSTALL_DIR}
-)
-# kmsicecandidate end
 
 set(KMS_WEBRTC_DATA_PROTOCOL_SOURCES
   kmswebrtcdatasessionbin.c
@@ -123,17 +90,57 @@ set(KMS_WEBRTC_SOURCES
   kmswebrtctransport.c
   kmswebrtcsession.c
   kmswebrtcendpoint.c
+  ${KMS_ICE_SOURCES}
 )
 
 set(KMS_WEBRTC_HEADERS
+  kmswebrtcbaseconnection.h
+  kmswebrtcconnection.h
+  kmswebrtcrtcpmuxconnection.h
+  kmswebrtcbundleconnection.h
+  kmswebrtcsctpconnection.h
+  kmswebrtctransportsrc.h
+  kmswebrtctransportsink.h
+  kmswebrtctransport.h
+  kmswebrtcsession.h
   kmswebrtcendpoint.h
+  ${KMS_ICE_HEADERS}
 )
 
 add_glib_marshal(KMS_WEBRTC_SOURCES KMS_WEBRTC_HEADERS kms-webrtc-marshal __kms_webrtc_marshal)
 
-add_library(webrtcendpoint MODULE ${KMS_WEBRTC_SOURCES} ${KMS_WEBRTC_HEADERS})
+add_library(kmswebrtcendpointlib SHARED ${KMS_WEBRTC_SOURCES} ${KMS_WEBRTC_HEADERS})
+add_dependencies(kmswebrtcendpointlib rtcpdemux webrtcdataproto)
 
-add_dependencies(webrtcendpoint rtcpdemux webrtcdataproto)
+# install kmswebrtcendpointlib
+
+install(
+  TARGETS kmswebrtcendpointlib
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  PUBLIC_HEADER DESTINATION ${INCLUDE_PREFIX}
+)
+
+foreach (HEADER ${KMS_WEBRTC_HEADERS})
+  list (APPEND FIND_HEADERS webrtcendpoint/${HEADER})
+endforeach ()
+
+set (REQUIRED_LIBS
+  "nice ${NICE_REQUIRED}"
+)
+
+configure_file(FindKmsWebRtcEndpointLib.cmake.in ${CMAKE_BINARY_DIR}/FindKmsWebRtcEndpointLib.cmake @ONLY)
+
+install(FILES
+  ${CMAKE_BINARY_DIR}/FindKmsWebRtcEndpointLib.cmake
+  DESTINATION ${CMAKE_MODULES_INSTALL_DIR}
+)
+# end install kmswebrtcendpointlib
+
+add_library(webrtcendpoint MODULE kmswebrtc.c)
+
+add_dependencies(webrtcendpoint kmswebrtcenpointlib)
 
 include_directories(
   ${KmsGstCommons_INCLUDE_DIRS}
@@ -145,14 +152,17 @@ include_directories(
   ${nice_INCLUDE_DIRS}
 )
 
-target_link_libraries(webrtcendpoint
-  kmsicecandidate
+target_link_libraries(kmswebrtcendpointlib
   webrtcdataproto
   ${KmsGstCommons_LIBRARIES}
   ${gstreamer-1.5_LIBRARIES}
   ${gstreamer-base-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
   ${nice_LIBRARIES}
+)
+
+target_link_libraries(webrtcendpoint
+  kmswebrtcendpointlib
 )
 
 install(
