--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -12,7 +12,8 @@ generate_code (
       ${CMAKE_CURRENT_SOURCE_DIR}/implementation
       ${CMAKE_CURRENT_SOURCE_DIR}/../gst-plugins
       ${nice_INCLUDE_DIRS}
-  SERVER_IMPL_LIB_EXTRA_LIBRARIES kmshttpep kmsicecandidate
+  SERVER_IMPL_LIB_EXTRA_LIBRARIES kmshttpep
       ${nice_LIBRARIES}
+      kmswebrtcendpointlib
   SERVER_STUB_DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/implementation/objects
 )
