webrtcdataproto: Fix missing symbol problem
Change-Id: I4de1bbd80f23f3aa3e6a48026f7194ee0add39f5

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -59,6 +59,7 @@ add_library(webrtcdataproto SHARED
 )
 
 target_link_libraries(webrtcdataproto
+  ${KmsGstCommons_LIBRARIES}
   ${gstreamer-1.5_LIBRARIES}
   ${gstreamer-base-1.5_LIBRARIES}
   ${gstreamer-app-1.5_LIBRARIES}
