webrtcendpoint: Fix possible linking problems in tests
Change-Id: I088bc18921199672fc66f8d6a625ae5f53ed254b

--- a/tests/check/element/CMakeLists.txt
+++ b/tests/check/element/CMakeLists.txt
@@ -86,6 +86,7 @@ target_include_directories(test_webrtcendpoint PRIVATE
                            ${nice_INCLUDE_DIRS}
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../src/gst-plugins")
 target_link_libraries(test_webrtcendpoint
+                      kmswebrtcendpointlib
                       ${gstreamer-1.5_LIBRARIES}
                       ${gstreamer-sdp-1.5_LIBRARIES}
                       ${gstreamer-check-1.5_LIBRARIES}
