kmssrtpconnection: Add a new class to manage srtp
Change-Id: Iacbcb639fc3609dc4e0365b01b2de9d0bdf64605

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 set(KMS_RTPENDPOINT_SOURCES
   kmsrtpbaseconnection.c
   kmsrtpconnection.c
+  kmssrtpconnection.c
   kmsrtpsession.c
   kmsrtpendpoint.c
   kmssocketutils.c
