kmssrtpsession: Add srtp session
Change-Id: I5c2604f23a6d8a2b85f7fa9dd7d9bb42da84360d

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -5,6 +5,7 @@ set(KMS_RTPENDPOINT_SOURCES
   kmsrtpconnection.c
   kmssrtpconnection.c
   kmsrtpsession.c
+  kmssrtpsession.c
   kmsrtpendpoint.c
   kmssocketutils.c
 )
