rtpconnection: Move socket management to an external file
Change-Id: If47fd5bef94cb11a6f584c8f9effdec092f2df4c

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -5,10 +5,12 @@ set(KMS_RTPENDPOINT_SOURCES
   kmsrtpconnection.c
   kmsrtpsession.c
   kmsrtpendpoint.c
+  kmssocketutils.c
 )
 
 set(KMS_RTPENDPOINT_HEADERS
   kmsrtpendpoint.h
+  kmssocketutils.h
 )
 
 add_library(rtpendpoint MODULE ${KMS_RTPENDPOINT_SOURCES} ${KMS_RTPENDPOINT_HEADERS})
