kmsrecorderendpoint: Improve recorder efficency using callbacks instead of signals
Change-Id: Ib06d3facd2a04a614f35786b328eb51663ba1e74

--- a/src/gst-plugins/CMakeLists.txt
+++ b/src/gst-plugins/CMakeLists.txt
@@ -50,6 +50,7 @@ include_directories(
   ${KmsGstCommons_INCLUDE_DIRS}
   ${gstreamer-1.5_INCLUDE_DIRS}
   ${gstreamer-base-1.5_INCLUDE_DIRS}
+  ${gstreamer-app-1.5_INCLUDE_DIRS}
   ${gstreamer-pbutils-1.5_INCLUDE_DIRS}
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
@@ -60,6 +61,7 @@ target_link_libraries(${LIBRARY_NAME}plugins
   ${KmsGstCommons_LIBRARIES}
   ${gstreamer-1.5_LIBRARIES}
   ${gstreamer-base-1.5_LIBRARIES}
+  ${gstreamer-app-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
   ${libsoup-2.4_LIBRARIES}
 )
