kmsmuxingpipeline: Renamed to kmsavmuxer
Change-Id: I1f11ab3ace73e097b0e262c137e333966bc7d72e

--- a/src/gst-plugins/CMakeLists.txt
+++ b/src/gst-plugins/CMakeLists.txt
@@ -17,8 +17,8 @@ set(KMS_ELEMENTS_SOURCES
   kmsdispatcheronetomany.c
   kmscompositemixer.c
   kmsalphablending.c
-  kmsmuxingpipeline.c
   kmsbasemediamuxer.c
+  kmsavmuxer.c
 )
 
 set(KMS_ELEMENTS_HEADERS
@@ -32,8 +32,8 @@ set(KMS_ELEMENTS_HEADERS
   kmsdispatcheronetomany.h
   kmscompositemixer.h
   kmsalphablending.h
-  kmsmuxingpipeline.h
   kmsbasemediamuxer.h
+  kmsavmuxer.h
 )
 
 set(ENUM_HEADERS
