kmsrecorderendpoint: integrate ksrmuxer
Change-Id: If82f345346fd702b34eaf43c0dc077c8434fe439

--- a/src/gst-plugins/CMakeLists.txt
+++ b/src/gst-plugins/CMakeLists.txt
@@ -19,6 +19,7 @@ set(KMS_ELEMENTS_SOURCES
   kmsalphablending.c
   kmsbasemediamuxer.c
   kmsavmuxer.c
+  kmsksrmuxer.c
 )
 
 set(KMS_ELEMENTS_HEADERS
@@ -34,6 +35,7 @@ set(KMS_ELEMENTS_HEADERS
   kmsalphablending.h
   kmsbasemediamuxer.h
   kmsavmuxer.h
+  kmsksrmuxer.h
 )
 
 set(ENUM_HEADERS
