kmsrtpendpoint: Use new getrandom system call to get random values when possible.
This system call was requested by the LibreSSL Portable developers. It
is available since 3.17 kernels to emulate the getentropy from OpenBSD
systems. It aims to provide a reliable random source to generate crypto
keys avoiding commomn mistakes when trying to read from /dev/random in
chrooted or compromised hosts

Change-Id: I6103d7d1cef8bbc10d57a345e3215b9ef6194436

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -8,6 +8,7 @@ set(KMS_RTPENDPOINT_SOURCES
   kmssrtpsession.c
   kmsrtpendpoint.c
   kmssocketutils.c
+  kmsrandom.c
 )
 
 set(KMS_RTPENDPOINT_HEADERS
