debian/control: Add libnice-dev as a dev dependency
Change-Id: I0690bd786ab7ffb1a83e5cf35d785e9e03beb036

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Description: Kurento elements module
 Package: kms-elements-6.0-dev
 Architecture: any
 Depends: kms-elements-6.0 (= ${binary:Version}),
+  libnice-dev (>= 0.1.7),
   kms-core-6.0-dev
 Breaks:
   kms-elements-dev
