--- a/tests/check/element/CMakeLists.txt
+++ b/tests/check/element/CMakeLists.txt
@@ -21,8 +21,7 @@ add_dependencies(test_recorderendpoint ${LIBRARY_NAME}plugins)
 target_include_directories(test_recorderendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
-                           ${gstreamer-check-1.5_INCLUDE_DIRS}
-                           "${CMAKE_CURRENT_SOURCE_DIR}/../../../src/gst-plugins")
+                           ${gstreamer-check-1.5_INCLUDE_DIRS})
 target_link_libraries(test_recorderendpoint
                       ${gstreamer-1.5_LIBRARIES}
                       ${gstreamer-check-1.5_LIBRARIES}
