--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- -DDISABLE_TESTS=TRUE -DCMAKE_INSTALL_SYSCONFDIR=/etc
+	dh_auto_configure -- -DGENERATE_TESTS=TRUE -DCMAKE_INSTALL_SYSCONFDIR=/etc
 
 .PHONY: override_dh_strip
 
