WebRtcEndpoint: Add the possibility to configure the pem certificate
Change-Id: I65f8510801c28a9548283d36913eba5d3da658ac

--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -9,3 +9,5 @@
 ;    'address' must be an IP (not a domain).
 ;    'transport' is optional (UDP by default).
 ; turnURL=user:password@address:port(?transport=[udp|tcp|tls])
+
+;pemCertificate=<path>
