recorderendpoint.c: Remove states transition lock
Now several state transitions can be requested before the state
changed has already performed.

Events are raised to know the actual state of the recorder.

Change-Id: Ie1dc96d84596dbbba9a3adb3b8b0d1833621102f

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: debhelper (>= 8.0.0),
  gstreamer1.5-nice,
  uuid-dev,
  valgrind,
- openwebrtc-gst-plugins-dev
+ openwebrtc-gst-plugins-dev,
+ ffmpeg
 Standards-Version: 3.9.4
 Homepage: http://kurento.org
 Vcs-Git: git://github.com/Kurento/kms-elements.git
