fixes after @j1elo review

--- a/src/server/config/PlayerEndpoint.conf.ini
+++ b/src/server/config/PlayerEndpoint.conf.ini
@@ -1,3 +1,2 @@
-;; This is setting from gstreamer plugin gst-plugins-good
-;; https://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-good/html/gst-plugins-good-plugins-rtspsrc.html#GstRTSPSrc--port-range
-;rtspSrcPortRange=<PortMin-PortMax>
+;; Range of ports that can be allocated when acting as RTSP client
+;rtspClientPortRange=<PortMin-PortMax>
