--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -26,6 +26,7 @@
 ;; one Relay Candidate (type "relay").
 ;;
 ; turnURL=<User>:<Pass>@<IpAddress>:<Port>[?transport=<Transport>]
+; externalIPs=<IpAddress>
 
 ;pemCertificate is deprecated. Please use pemCertificateRSA instead
 ;pemCertificate=<path>
