--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 	dh $@ --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -- -DGENERATE_TESTS=TRUE -DCMAKE_INSTALL_SYSCONFDIR=/etc
+	dh_auto_configure -- -DGENERATE_TESTS=FALSE -DDISABLE_TESTS=TRUE -DCMAKE_INSTALL_SYSCONFDIR=/etc
 
 .PHONY: override_dh_strip
 
