--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -125,12 +125,15 @@
 ;externalAddress=198.51.100.1
 ;externalAddress=2001:0db8:85a3:0000:0000:8a2e:0370:7334
 
-;; Whether to enable TCP candidate gathering via NiceAgent's ice-tcp property.
-;; The motivation behind this is to potentially speed up gathering
-;; by preventing TCP candidate gathering in scenarios where they aren't needed.
-;; Property reference: https://libnice.freedesktop.org/libnice/NiceAgent.html#NiceAgent--ice-tcp
+;; Enable ICE-TCP candidate gathering.
 ;;
-;; <niceAgentIceTcp> MUST be either 0 (FALSE) or 1 (TRUE)
-;; Default is 1 (TRUE)
+;; This setting enables or disables using TCP for ICE candidate gathering in
+;; the underlying libnice library:
+;; https://libnice.freedesktop.org/libnice/NiceAgent.html#NiceAgent--ice-tcp
+;;
+;; You might want to disable ICE-TCP to potentially speed up ICE gathering
+;; by avoiding TCP candidates in scenarios where they are not needed.
+;;
+;; <iceTcp> is either 1 (ON) or 0 (OFF). Default: 1 (ON).
 ;;
 ;iceTcp=1
