prepare for siprtp_module

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
+
+set(CUSTOM_PREFIX "kurento")
+set(INCLUDE_PREFIX "${CMAKE_INSTALL_INCLUDEDIR}/${CUSTOM_PREFIX}/rtpendpoint")
+
+
 set(KMS_RTPENDPOINT_SOURCES
   kmsrtpbaseconnection.c
   kmsrtpconnection.c
@@ -12,6 +17,11 @@ set(KMS_RTPENDPOINT_SOURCES
 )
 
 set(KMS_RTPENDPOINT_HEADERS
+  kmsrtpbaseconnection.h
+  kmsrtpconnection.h
+  kmssrtpconnection.h
+  kmsrtpsession.h
+  kmssrtpsession.h
   kmsrtpendpoint.h
   kmssocketutils.h
 )
@@ -23,7 +33,7 @@ set(ENUM_HEADERS
 list(APPEND KMS_RTPENDPOINT_HEADERS ${ENUM_HEADERS})
 add_glib_enumtypes(KMS_RTPENDPOINT_SOURCES KMS_RTPENDPOINT_HEADERS kms-rtp-enumtypes KMS ${ENUM_HEADERS})
 
-add_library(rtpendpoint MODULE ${KMS_RTPENDPOINT_SOURCES} ${KMS_RTPENDPOINT_HEADERS})
+add_library(rtpendpoint SHARED ${KMS_RTPENDPOINT_SOURCES} ${KMS_RTPENDPOINT_HEADERS})
 if(SANITIZERS_ENABLED)
   add_sanitizers(rtpendpoint)
 endif()
@@ -48,9 +58,13 @@ target_link_libraries(rtpendpoint
   ${nice_LIBRARIES}
 )
 
+set_target_properties(rtpendpoint PROPERTIES PUBLIC_HEADER "${KMS_RTPENDPOINT_HEADERS}")
+set_target_properties(rtpendpoint PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
+
 install(
   TARGETS rtpendpoint
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_GST_PLUGINS_DIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  PUBLIC_HEADER DESTINATION ${INCLUDE_PREFIX}
 )
