minor doc fixes

--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -147,7 +147,7 @@
 ;; This in turn may make intermediate routers to adapt ist traffic handling for those packets 
 ;; according to the DSCP value set.
 ;; Recommended values for WebRTc traffic are indicated in section 5 of RFC 8837 https://datatracker.ietf.org/doc/html/rfc8837#section-5
-;; Mainly the following ones, although al other standard defined SDCP value codes can be applied as 
+;; Mainly the following ones, although all other standard defined DSCP value codes can be applied as 
 ;; currently registered in IANA : http://www.iana.org/assignments/dscp-registry/dscp-registry.xml
 ;; This feature needs to be managed with caution, as intermediate routers are not guaranteed to support it and also
 ;; as specified in RFC 8837, some routers may block traffic with certain DSCP values
@@ -170,8 +170,8 @@
 ;;     |          Data         |  LE (1)  |  DF |    AF11    |    AF21    |
 ;;     |                       |          | (0) |            |            |
 ;;     +-----------------------+----------+-----+------------+------------+
-;; This only contemplates outgoing network packets form KMS, to complete the solution, DSCP must be also 
+;; This only covers outgoing network packets form KMS, to complete the solution, DSCP must be also 
 ;; requested on client, unfortunatelly for traffic on the other direction, this must be requested to the 
-;; browser or client. Ob broeser the client application needs to use the following API 
+;; browser or client. On browser, the client application needs to use the following API 
 ;; https://www.w3.org/TR/webrtc-priority/
-;
+;qos-dscp=AUDIO_HIGH
