--- a/src/server/config/WebRtcEndpoint.conf.ini
+++ b/src/server/config/WebRtcEndpoint.conf.ini
@@ -141,12 +141,12 @@
 ;;
 ;iceTcp=1
 
-;; Enable DSCP tagging for QoS management
+;; Enable DSCP tagging for QoS management.
 ;; WebRTCEndpoints that have this property set to a value different from NO_VALUE
-;; will have its output network packets tagged with the corresponding DSCP value
-;; This in turn may make intermediate routers to adapt ist traffic handling for those packets 
+;; will have its output network packets tagged with the corresponding DSCP value.
+;; This in turn may make intermediate routers to adapt their traffic handling for those packets 
 ;; according to the DSCP value set.
-;; Recommended values for WebRTc traffic are indicated in section 5 of RFC 8837 https://datatracker.ietf.org/doc/html/rfc8837#section-5
+;; Recommended values for WebRTC traffic are indicated in section 5 of RFC 8837 https://datatracker.ietf.org/doc/html/rfc8837#section-5
 ;; Mainly the following ones, although all other standard defined DSCP value codes can be applied as 
 ;; currently registered in IANA : http://www.iana.org/assignments/dscp-registry/dscp-registry.xml
 ;; This feature needs to be managed with caution, as intermediate routers are not guaranteed to support it and also
@@ -171,7 +171,7 @@
 ;;     |                       |          | (0) |            |            |
 ;;     +-----------------------+----------+-----+------------+------------+
 ;; This only covers outgoing network packets form KMS, to complete the solution, DSCP must be also 
-;; requested on client, unfortunatelly for traffic on the other direction, this must be requested to the 
+;; requested on client, unfortunately for traffic on the other direction, this must be requested to the 
 ;; browser or client. On browser, the client application needs to use the following API 
 ;; https://www.w3.org/TR/webrtc-priority/
 ;qos-dscp=AUDIO_HIGH
